--- a/templates/base/base_login.html
+++ b/templates/base/base_login.html
@@ -1,27 +1,16 @@
 {% load static %}
+
 <!DOCTYPE html>
-<!--
-This is a starter template page. Use this page to start your new project from
-scratch. This page gets rid of all links and provides the needed markup only.
--->
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+<html lang="es" dir="ltr">
 
-  <title>Login</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Flora Login</title>
+    <link rel="stylesheet" href="{% static 'dist/css/login_style.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
-  <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-</head>
-<body class="hold-transition sidebar-mini">
-
-
+  <body>
 
 
   <!-- Content Wrapper. Contains page content -->
@@ -31,17 +20,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- /.content-wrapper -->
 
 
-  <!-- Main Footer -->
-{% block footer %}
-
-{% endblock %}
-
-
-<!-- jQuery -->
-<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
-<!-- Bootstrap 4 -->
-<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- AdminLTE App -->
 
 </body>
 </html>
