--- a/flora/templates/mostrar_zona.html
+++ b/flora/templates/mostrar_zona.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block contenido %}
-    <div class="content-wrapper" style="background-image: url('/static/dist/img/udec1.jpg');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: 100% 100%;" >
-    <!-- Content Header (Page header) -->
+    <div class="content-wrapper">
 
+   <h1>Especies</h1>
+    <a href="{% url 'agregar_especie' %}">Agregar</a>
 
-    <!-- /.content -->
   </div>
 {% endblock %}
 
