--- a/usuario/templates/listar_usuarios.html
+++ b/usuario/templates/listar_usuarios.html
@@ -1,5 +1,9 @@
 {% extends 'base/base.html' %}
 
+{% block navbar %}
+    {% include 'base/navbar.html' %}
+{% endblock %}
+
 {% block panel_izquierdo %}
     {% include 'base/panel_izquierdo.html' %}
 {% endblock %}
