--- a/templates/base/panel_izquierdo.html
+++ b/templates/base/panel_izquierdo.html
@@ -1,42 +1,43 @@
   {% load static %}
 
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar  sidebar-dark-navy navbar-navy  elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-      <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-           style="opacity: .8">
-      <span class="brand-text font-weight-light">Flora-UdeC</span>
-    </a>
+
 
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="{% url 'mostrar_especies' %}">Especies</a>
-        </div>
-      </div>
+
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+          <img src="{% static 'dist/img/udec3.png' %}" alt="AdminLTE Logo"  style="width: 210px; height: 50px">
         </div>
         <div class="info">
-          <a href="{% url 'agregar_especie' %}">Agregar especie</a>
+
         </div>
       </div>
 
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
+
+            <li class="nav-item ">
+            <a href="{% url 'index' %}" class="nav-link">
+              <i class=""></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
+              <p style="color: white">
+                Inicio
+              </p>
+            </a>
+          </li>
+
+            <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item has-treeview menu-open">
             <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
               <p>
                 Gestion de especies
                 <i class="right fas fa-angle-left"></i>
@@ -44,28 +45,158 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Active Page</p>
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-tree nav-icon"></i>
+                  <p>Registrar Especie</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Inactive Page</p>
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-list nav-icon"></i>
+                  <p>Listar Especie</p>
                 </a>
               </li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+             <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
               <p>
-                Simple Link
-                <span class="right badge badge-danger">New</span>
+                Tipos de especies
+                <i class="right fas fa-angle-left"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-crop nav-icon"></i>
+                  <p>Registrar Tipo de Especie</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-list nav-icon"></i>
+                  <p>Listar Tipos de Especie</p>
+                </a>
+              </li>
+            </ul>
           </li>
+               <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
+              <p>
+                Origenes de especies
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-feather-alt nav-icon"></i>
+                  <p>Registrar nuevo Origen</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-list nav-icon"></i>
+                  <p>Listar Origen de Especies</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+                <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
+              <p>
+                Zonas Universitaria
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-home nav-icon"></i>
+                  <p>Registrar Zona UdeC</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-list nav-icon"></i>
+                  <p>Listar Zona UdeC</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+                 <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
+              <p>
+                Gestion de usuarios
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-user nav-icon"></i>
+                  <p>Registrar Usuario</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-list nav-icon"></i>
+                  <p>Listar Usuarios</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+                  <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class=" "></i>
+                <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
+              <p>
+                Reportes
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-book nav-icon"></i>
+                  <p>Reporte de Especies</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-book-open nav-icon"></i>
+                  <p>Reporte de Visitas</p>
+                </a>
+              </li>
+                <li class="nav-item">
+                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                  <i class="fas fa-book-reader nav-icon"></i>
+                  <p>Reporte de Zonas</p>
+                </a>
+              </li>
+            </ul>
+          </li>
+
+
+
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
