Conexion de pantallas

--- a/templates/base/panel_izquierdo.html
+++ b/templates/base/panel_izquierdo.html
@@ -51,9 +51,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'mostrar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-list nav-icon"></i>
-                  <p>Listar Especie</p>
+                  <p>Listar Especies</p>
                 </a>
               </li>
             </ul>
@@ -71,13 +71,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'agregar_tipo_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-crop nav-icon"></i>
                   <p>Registrar Tipo de Especie</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'mostrar_tipo_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-list nav-icon"></i>
                   <p>Listar Tipos de Especie</p>
                 </a>
@@ -97,13 +97,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'agregar_origen' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-feather-alt nav-icon"></i>
                   <p>Registrar nuevo Origen</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'mostrar_origen' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-list nav-icon"></i>
                   <p>Listar Origen de Especies</p>
                 </a>
@@ -123,13 +123,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'agregar_zona' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Registrar Zona UdeC</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'mostrar_zona' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-list nav-icon"></i>
                   <p>Listar Zona UdeC</p>
                 </a>
@@ -149,13 +149,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'agregar_usuario' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-user nav-icon"></i>
                   <p>Registrar Usuario</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'listar_usuarios' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-list nav-icon"></i>
                   <p>Listar Usuarios</p>
                 </a>
@@ -175,19 +175,19 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'agregar_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="#" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book nav-icon"></i>
                   <p>Reporte de Especies</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="#" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book-open nav-icon"></i>
                   <p>Reporte de Visitas</p>
                 </a>
               </li>
                 <li class="nav-item">
-                <a href="{% url 'mostrar_especies' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="#" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book-reader nav-icon"></i>
                   <p>Reporte de Zonas</p>
                 </a>
