--- a/flora/templates/agregar_origen.html
+++ b/flora/templates/agregar_origen.html
@@ -11,8 +11,7 @@
 {% block contenido %}
     <div class="content-wrapper">
 
-   <h1>Agregar especie</h1>
-
+   <h1>Agregar Origen</h1>
 
   </div>
 {% endblock %}
