Eduardo - Formularios parte 1

--- a/polls/templates/polls/starter.html
+++ b/polls/templates/polls/starter.html
@@ -9,12 +9,9 @@
 {% endblock %}
 
 {% block contenido %}
-    <div class="content-wrapper" style="background-image: url('/static/dist/img/udec1.jpg');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: 100% 100%;" >
-    <!-- Content Header (Page header) -->
+        <div class="content-wrapper" style="background-image: url('/static/dist/img/udec1.jpg');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: 100% 100%; margin-right: 0px " ></div>
 
 
-    <!-- /.content -->
-  </div>
 {% endblock %}
 
 {% block footer %}
