--- a/usuario/templates/listar_usuarios.html
+++ b/usuario/templates/listar_usuarios.html
@@ -11,7 +11,61 @@
 {% block contenido %}
 
     <div class="content-wrapper">
-<h1>listados de usuarios</h1>
+<h1 style="color: darkgoldenrod; text-align: center; margin-top: 25px; margin-bottom: 15px;">Lista de usuarios</h1>
+
+    <table class="table" >
+  <thead class="thead-dark" >
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Correo</th>
+      <th scope="col">Direccion</th>
+      <th scope="col">Usuario</th>
+      <th scope="col">Contraseña</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+        <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+       <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+         <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
     </div>
 {% endblock %}
 
