--- a/flora/templates/agregar_origen.html
+++ b/flora/templates/agregar_origen.html
@@ -11,7 +11,26 @@
 {% block contenido %}
     <div class="content-wrapper">
 
-   <h1>Agregar Origen</h1>
+   <div class="container " >
+        <div class="abs-center" >
+            <form style="width: 450px">
+                <h1 style="color: darkgoldenrod; text-align: center">Agregar origen de especie</h1>
+         <div class="form-group">
+        <label for="inputAddress">Nombre</label>
+              <input type="text" class="form-control" id="nombreorigen" placeholder="Ingrese nombre de origen">
+        </div>
+          <div class="form-group">
+        <label for="inputAddress">País</label>
+              <input type="text" class="form-control" id="paisorigen" placeholder="Ingrese el país de origen">
+        </div>
+
+            <div class="form-group" style="float: right">
+                <button type="button" class="btn btn-danger">Canselar</button>
+                <button type="button" class="btn btn-success">Guardar</button>
+            </div>
+     </form>
+            </div>
+    </div>
 
   </div>
 {% endblock %}
