--- a/flora/templates/agregar_tipo_especie.html
+++ b/flora/templates/agregar_tipo_especie.html
@@ -11,7 +11,22 @@
 {% block contenido %}
     <div class="content-wrapper">
 
-   <h1>Agregar especie</h1>
+   <div class="container " >
+        <div class="abs-center" >
+            <form style="width: 450px">
+                <h1 style="color: darkgoldenrod; text-align: center">Agregar tipo de especie</h1>
+         <div class="form-group">
+        <label for="inputAddress">Nombre</label>
+              <input type="text" class="form-control" id="nombretipo" placeholder="Ingrese nombre del tipo de especie">
+        </div>
+
+            <div class="form-group" style="float: right">
+                <button type="button" class="btn btn-danger">Canselar</button>
+                <button type="button" class="btn btn-success">Guardar</button>
+            </div>
+     </form>
+            </div>
+    </div>
 
 
   </div>
