--- a/flora/templates/agregar_zona.html
+++ b/flora/templates/agregar_zona.html
@@ -9,9 +9,28 @@
 {% endblock %}
 
 {% block contenido %}
-    <div class="content-wrapper">
+    <div class="content-wrapper" >
 
-   <h1>Agregar especie</h1>
+   <div class="container " >
+        <div class="abs-center" >
+            <form style="width: 450px">
+                <h1 style="color: darkgoldenrod; text-align: center">Agregar usuario</h1>
+         <div class="form-group">
+        <label for="inputAddress">Nombre</label>
+              <input type="text" class="form-control" id="nombrezona" placeholder="Ingrese nombre de la zona">
+        </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Descripción</label>
+                    <textarea class="form-control" id="descripcionzona" rows="3"></textarea>
+                </div>
+
+            <div class="form-group" style="float: right">
+                <button type="button" class="btn btn-danger">Canselar</button>
+                <button type="button" class="btn btn-success">Guardar</button>
+            </div>
+     </form>
+            </div>
+    </div>
 
 
   </div>
