--- a/flora/templates/mostrar_especie.html
+++ b/flora/templates/mostrar_especie.html
@@ -9,12 +9,63 @@
 {% endblock %}
 
 {% block contenido %}
-    <div class="content-wrapper">
+<div class="content-wrapper">
+<h1 style="color: darkgoldenrod; text-align: center; margin-top: 25px; margin-bottom: 15px;">Lista de especies arboreas</h1>
 
-   <h1>Especies</h1>
-    <a href="{% url 'agregar_especie' %}">Agregar</a>
+    <table class="table" >
+  <thead class="thead-dark" >
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Foto</th>
+      <th scope="col">Nombre </th>
+      <th scope="col">Nombre Cientifico</th>
+      <th scope="col">Zona</th>
+      <th scope="col">Codigo QR</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+        <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+       <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+         <td></td>
+      <td></td>
+      <td></td>
+        <td></td>
+      <td></td>
+      <td style="float: right">
+          <button type="button" class="btn btn-primary">Modificar</button>
+          <button type="button" class="btn btn-danger">Eliminar</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-  </div>
+
+    </div>
 {% endblock %}
 
 {% block footer %}
