--- a/flora/templates/agregar_zona.html
+++ b/flora/templates/agregar_zona.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load crispy_forms_filters %}
 
 {% block navbar %}
     {% include 'base/navbar.html' %}
@@ -13,7 +14,7 @@
 
    <div class="container " >
         <div class="abs-center" >
-            <form style="width: 450px">
+            <!--<form style="width: 450px">
                 <h1 style="color: darkgoldenrod; text-align: center">Agregar usuario</h1>
          <div class="form-group">
         <label for="inputAddress">Nombre</label>
@@ -25,11 +26,16 @@
                 </div>
 
             <div class="form-group" style="float: right">
-                <button type="button" class="btn btn-danger">Canselar</button>
+                <button type="button" class="btn btn-danger">Cancelar</button>
                 <button type="button" class="btn btn-success">Guardar</button>
             </div>
-     </form>
-            </div>
+     </form>-->
+         <form method="post" action="{% url 'agregar_zona' %}">
+             {% csrf_token %}
+             {{ form | crispy }}
+             <button class="btn btn-primary" type="submit">Guardar</button>
+         </form>
+        </div>
     </div>
 
 
