--- a/polls/templates/registration/login.html
+++ b/polls/templates/registration/login.html
@@ -13,15 +13,15 @@
     <div class="in-flex">
 
        <div>
-           <input class="controls" type="text" name="username" value="" placeholder="Usuario">
+           <input class="controls" type="text" name="username" id="username" value="" placeholder="Usuario">
        </div>
 
        <div>
-           <input class="controls" type="password" name="password" value="" placeholder="Contraseña">
+           <input class="controls" type="password" name="password" id="password" value="" placeholder="Contraseña">
        </div>
 
        <div>
-          <input class="buttons" type="submit" name="" value="Ingresar">
+          <input class="buttons" type="submit" name="" id="ingresar" value="Ingresar">
        </div>
 
     </div>
@@ -30,7 +30,6 @@
 
   </section>
 </form>
-
 
 
 {% endblock %}
