--- a/flora/templates/agregar_zona.html
+++ b/flora/templates/agregar_zona.html
@@ -13,23 +13,9 @@
     <div class="content-wrapper" >
 
    <div class="container " >
+       <h1 style="color: darkgoldenrod; text-align: center">Agregar Zona UdeC</h1>
         <div class="abs-center" >
-            <!--<form style="width: 450px">
-                <h1 style="color: darkgoldenrod; text-align: center">Agregar usuario</h1>
-         <div class="form-group">
-        <label for="inputAddress">Nombre</label>
-              <input type="text" class="form-control" id="nombrezona" placeholder="Ingrese nombre de la zona">
-        </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Descripción</label>
-                    <textarea class="form-control" id="descripcionzona" rows="3"></textarea>
-                </div>
 
-            <div class="form-group" style="float: right">
-                <button type="button" class="btn btn-danger">Cancelar</button>
-                <button type="button" class="btn btn-success">Guardar</button>
-            </div>
-     </form>-->
          <form method="post" action="{% url 'agregar_zona' %}">
              {% csrf_token %}
              {{ form | crispy }}
