--- a/flora/templates/mostrar_origen.html
+++ b/flora/templates/mostrar_origen.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 
+
 {% block navbar %}
     {% include 'base/navbar.html' %}
 {% endblock %}
@@ -12,51 +13,37 @@
     <div class="content-wrapper">
 <h1 style="color: darkgoldenrod; text-align: center; margin-top: 25px; margin-bottom: 15px;">Lista de origenes de especies</h1>
 
-    <table class="table" >
-  <thead class="thead-dark" >
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">País</th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-        <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
 
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-       <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
+    <div class="border mt-2">
+                                    <div class="card">
+                                        <div class="table-stats order-table ov-h">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Nombre</th>
+                                                        <th>País</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for a in object_list %}
+                                                        <tr>
+                                                            <td>{{ a.Nombre }}</td>
+                                                            <td> {{a.Pais }}</td>
 
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-         <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
+                                                        </tr>
 
-    </tr>
-  </tbody>
-</table>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
 
+                                    </div>
+                                </div>
 
     </div>
+
+
+
 {% endblock %}
 
 {% block footer %}
