--- a/flora/templates/agregar_zona.html
+++ b/flora/templates/agregar_zona.html
@@ -19,7 +19,7 @@
          <form method="post" action="{% url 'agregar_zona' %}">
              {% csrf_token %}
              {{ form | crispy }}
-             <button class="btn btn-primary" type="submit">Guardar</button>
+             <button class="btn btn-primary btn-block" type="submit">Guardar</button>
          </form>
         </div>
     </div>
