--- a/flora/templates/mostrar_zona.html
+++ b/flora/templates/mostrar_zona.html
@@ -10,7 +10,7 @@
 
 {% block contenido %}
     <div class="content-wrapper">
-<h1 style="color: darkgoldenrod; text-align: center; margin-top: 25px; margin-bottom: 15px;">Lista de zonas universitarias</h1>
+       <h1 style="color: darkgoldenrod; text-align: center">Lista de zonas Universitaria</h1>
 
 
     <div class="border mt-2">
@@ -30,8 +30,8 @@
                                                             <td> {{a.Descripcion }}</td>
                                                             <td>
                                                                 <p>
-                                                                    <a onclick="abrir_modal_creacion('{% url 'modificar_zona' a.id %}')" class="btn btn-primary">Editar</a>
-                                                                    <a onclick="abrir_modal_eliminar('{% url 'eliminar_zona' a.id %}')" class="btn btn-danger">Eliminar</a>
+                                                                    <a onclick="abrir_modal_creacion('{% url 'modificar_zona' a.id %}')" class="btn btn-primary btn-block">Editar</a>
+                                                                    <a onclick="abrir_modal_eliminar('{% url 'eliminar_zona' a.id %}')" class="btn btn-danger btn-block">Eliminar</a>
                                                                 </p>
                                                             </td>
                                                         </tr>
