--- a/flora/templates/confirmar_eliminacion_especie.html
+++ b/flora/templates/confirmar_eliminacion_especie.html
@@ -1,14 +1,14 @@
 <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
         <div class="modal-header">
-            <h2 class="modal-title">Eliminar Zona</h2>
+            <h2 class="modal-title">Eliminar Especie</h2>
             <button class="close" type="button" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body">
-            <form method="post" action="{% url 'eliminar_zona' object.id %}">
+            <form method="post" action="{% url 'eliminar_especie' object.id %}">
                 {% csrf_token %}
-                <p><strong>¿Decea eliminar la zona {{ object.Nombre }} ?</strong></p>
-                <button class="btn btn-danger" type="submit">Eliminar Zona</button>
+                <p><strong>¿Decea eliminar la especie {{ object.Nombre }} ?</strong></p>
+                <button class="btn btn-danger" type="submit">Eliminar Especie</button>
             </form>
         </div>
         <div class="modal-footer">
