--- a/flora/templates/modificar_especie.html
+++ b/flora/templates/modificar_especie.html
@@ -1,14 +1,17 @@
+
+{% load crispy_forms_filters %}
+
 <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
         <div class="modal-header">
-            <h2 class="modal-title">Eliminar Zona</h2>
+            <h2 class="modal-title">Editar Especie</h2>
             <button class="close" type="button" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body">
-            <form method="post" action="{% url 'eliminar_zona' object.id %}">
+            <form method="post" action="{% url 'modificar_especie' object.id %}">
                 {% csrf_token %}
-                <p><strong>¿Decea eliminar la zona {{ object.Nombre }} ?</strong></p>
-                <button class="btn btn-danger" type="submit">Eliminar Zona</button>
+                {{ form | crispy }}
+                <button class="btn btn-primary" type="submit">Guardar</button>
             </form>
         </div>
         <div class="modal-footer">
