--- a/polls/templates/polls/starter.html
+++ b/polls/templates/polls/starter.html
@@ -9,9 +9,12 @@
 {% endblock %}
 
 {% block contenido %}
-        <div class="content-wrapper" style="background-image: url('/static/dist/img/udec1.jpg');-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: 100% 100%; margin-right: 0px " ></div>
 
-
+    <div class="content-wrapper" style="background-color: white" >
+<div class="container "  style="margin-right:auto">
+<img  src='/static/dist/img/udec1.jpg' width="60%" style="margin-left:20%; margin-top: 100px" />
+</div>
+    </div>
 {% endblock %}
 
 {% block footer %}
