--- a/templates/base/panel_izquierdo.html
+++ b/templates/base/panel_izquierdo.html
@@ -34,7 +34,7 @@
 
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview menu-close">
             <a href="#" class="nav-link active">
               <i class=" "></i>
                 <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
@@ -60,7 +60,7 @@
           </li>
                 <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview menu-close">
             <a href="#" class="nav-link active">
               <i class=" "></i>
                 <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
@@ -86,7 +86,7 @@
           </li>
                  <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview menu-close">
             <a href="#" class="nav-link active">
               <i class=" "></i>
                 <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
@@ -112,7 +112,7 @@
           </li>
                   <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview menu-close">
             <a href="#" class="nav-link active">
               <i class=" "></i>
                 <img src="/static/dist/img/planta.png" width="30" height="30" alt="">
