--- a/flora/templates/agregar_especie.html
+++ b/flora/templates/agregar_especie.html
@@ -19,7 +19,7 @@
          <form method="post" action="{% url 'agregar_especie' %}">
              {% csrf_token %}
              {{ form | crispy }}
-             <button class="btn btn-primary btn-block" type="submit">Guardar</button>
+             <button class="btn btn-success btn-block" style="color: white" type="submit">Guardar</button>
          </form>
         <!--</div>-->
     </div>
