--- a/flora/templates/confirmar_elimminacion.html
+++ b/flora/templates/confirmar_elimminacion.html
@@ -8,7 +8,7 @@
             <form method="post" action="{% url 'eliminar_zona' object.id %}">
                 {% csrf_token %}
                 <p><strong>¿Decea eliminar la zona {{ object.Nombre }} ?</strong></p>
-                <button class="btn btn-danger" type="submit">Eliminar Zona</button>
+                <button class="btn btn-warning" type="submit">Eliminar Zona</button>
             </form>
         </div>
         <div class="modal-footer">
