--- a/flora/templates/modificar_zona.html
+++ b/flora/templates/modificar_zona.html
@@ -11,7 +11,7 @@
             <form method="post" action="{% url 'modificar_zona' object.id %}">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <button class="btn btn-primary" type="submit">Guardar</button>
+                <button class="btn btn-success" type="submit">Guardar</button>
             </form>
         </div>
         <div class="modal-footer">
