--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -13,7 +13,7 @@
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item">
-        <button type="button" class="btn btn-danger">Cerrar Sesión</button>
+        <a href="{% url 'deslogearce' %}" type="button" class="btn btn-danger">Cerrar Sesión</a>
       </li>
     </ul>
   </nav>
