--- a/flora/templates/mostrar_especie.html
+++ b/flora/templates/mostrar_especie.html
@@ -1,3 +1,4 @@
+
 {% extends 'base/base.html' %}
 
 {% block navbar %}
@@ -23,6 +24,7 @@
                                                         <th>Nombre Cientifico</th>
                                                         <th>Autor</th>
                                                         <th>Origen</th>
+                                                        <th>Imagen</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -32,6 +34,13 @@
                                                             <td> {{a.Nombre_Cientifico }}</td>
                                                             <td> {{a.Autor }}</td>
                                                             <td> {{a.Origen }}</td>
+
+                                                            <td>
+                                                                {% if  a.Imagen_Perfil %}
+                                                                <img src="{{a.Imagen_Perfil.url}}" width="80" height="80">
+                                                                {% endif %}
+
+                                                            </td>
                                                             <td>
                                                                 <p>
                                                                     <a onclick="abrir_modal_creacion('{% url 'modificar_especie' a.id %}')" class="btn btn-primary btn-block" style="color: white">Editar</a>
