--- a/usuario/templates/confirmar_eliminacion_usuario.html
+++ b/usuario/templates/confirmar_eliminacion_usuario.html
@@ -1,17 +1,14 @@
-
-{% load crispy_forms_filters %}
-
 <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
         <div class="modal-header">
-            <h2 class="modal-title">Editar Especie</h2>
+            <h2 class="modal-title">Eliminar Usuario</h2>
             <button class="close" type="button" data-dismiss="modal" aria-label="Cerrar"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body">
-            <form method="post" enctype="multipart/form-data" action="{% url 'modificar_especie' object.id %}">
+            <form method="post" action="{% url 'eliminar_usuario' object.id %}">
                 {% csrf_token %}
-                {{ form | crispy }}
-                <button class="btn btn-success" type="submit">Guardar</button>
+                <p><strong>¿Decea eliminar el usuario {{ object.username }} ?</strong></p>
+                <button class="btn btn-warning" type="submit">Eliminar Usuario</button>
             </form>
         </div>
         <div class="modal-footer">
