--- a/usuario/templates/listar_usuarios.html
+++ b/usuario/templates/listar_usuarios.html
@@ -10,63 +10,71 @@
 
 {% block contenido %}
 
-    <div class="content-wrapper">
-<h1 style="color: darkgoldenrod; text-align: center; margin-top: 25px; margin-bottom: 15px;">Lista de usuarios</h1>
-
-    <table class="table" >
-  <thead class="thead-dark" >
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Correo</th>
-      <th scope="col">Direccion</th>
-      <th scope="col">Usuario</th>
-      <th scope="col">Contraseña</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-        <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
-      <td style="float: right">
-          <button type="button" class="btn btn-primary">Modificar</button>
-          <button type="button" class="btn btn-danger">Eliminar</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-       <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
-      <td style="float: right">
-          <button type="button" class="btn btn-primary">Modificar</button>
-          <button type="button" class="btn btn-danger">Eliminar</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-         <td></td>
-      <td></td>
-      <td></td>
-        <td></td>
-      <td></td>
-      <td style="float: right">
-          <button type="button" class="btn btn-primary">Modificar</button>
-          <button type="button" class="btn btn-danger">Eliminar</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+        <div class="content-wrapper">
+       <h1 style="color: darkgoldenrod; text-align: center">Lista de usuarios</h1>
 
 
+    <div class="border mt-2">
+                                    <div class="card">
+                                        <div class="table-stats order-table ov-h">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Nombres</th>
+                                                        <th>Apellidos</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for a in object_list %}
+                                                        <tr>
+                                                            <td>{{ a.nombres }}</td>
+                                                            <td> {{a.apellidos }}</td>
+                                                            <td>
+                                                                <p>
+                                                                    <a onclick="abrir_modal_creacion('')" class="btn btn-primary btn-block" style="color: white">Editar</a>
+                                                                    <a onclick="abrir_modal_eliminar('{% url 'eliminar_usuario' a.id %}')" class="btn btn-danger btn-block" style="color: white">Eliminar</a>
+                                                                </p>
+                                                            </td>
+                                                        </tr>
+
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+<section>
+                    <div class="container">
+                           {# info adicional #}
+                    </div>
+                    <div class="modal fade" id="crear" role="dialog">
+
+                    </div>
+                    <div class="modal fade" id="eliminar" role="dialog">
+
+                    </div>
+                </section>
     </div>
+
+
+
+      <script type="text/javascript">
+        //var $=jQuery.noConflict();
+
+        function abrir_modal_creacion(url){
+            $("#crear").load(url,function (){
+                $(this).modal('show');
+            })
+        }
+
+        function abrir_modal_eliminar(url){
+            $("#eliminar").load(url,function (){
+                $(this).modal('show');
+            })
+        }
+
+    </script>
 {% endblock %}
 
 {% block footer %}
