Eduardo - usuarario crud completo

--- a/usuario/templates/listar_usuarios.html
+++ b/usuario/templates/listar_usuarios.html
@@ -31,7 +31,7 @@
                                                             <td> {{a.apellidos }}</td>
                                                             <td>
                                                                 <p>
-                                                                    <a onclick="abrir_modal_creacion('')" class="btn btn-primary btn-block" style="color: white">Editar</a>
+                                                                    <a onclick="abrir_modal_creacion('{% url 'modificar_usuario' a.id %}')" class="btn btn-primary btn-block" style="color: white">Editar</a>
                                                                     <a onclick="abrir_modal_eliminar('{% url 'eliminar_usuario' a.id %}')" class="btn btn-danger btn-block" style="color: white">Eliminar</a>
                                                                 </p>
                                                             </td>
