--- a/templates/base/base_login.html
+++ b/templates/base/base_login.html
@@ -1,13 +1,18 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="es" dir="ltr" style="background-color: #3618c0">
 
   <head>
     <meta charset="utf-8">
     <title>Flora Login</title>
     <link rel="stylesheet" href="{% static 'dist/css/login_style.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Theme style -->
+  <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
+
+
   </head>
 
   <body>
